@@ -16,7 +16,7 @@ export { overlay, remove_overlay } from './src/overlay.js';
 export { print_icon } from './src/print-icon.js';
 export { $, $$ } from './src/selector-utilities.js';
 export { disposeSliding, slideUp, slideDown, slideToggle } from './src/slide-up-down-toggle.js';
-export { better_text, title_case, sentence_case, text_cleaner } from './src/text-utilities.js';
+export { better_text, title_case, sentence_case, text_cleaner, nl2br } from './src/text-utilities.js';
 export { textarea_autosize } from './src/textarea-autosize.js';
 export { default as toggle_disabled } from './src/toggle-disabled.js';
 export { default as toggle_required } from './src/toggle-required.js';
@@ -35,3 +35,4 @@ export { arrayToCsv } from './src/array-to-csv.js';
 export { domBuilder } from './src/dom-builder.js';
 export { classnames } from './src/classnames.js';
 export { parseText } from './src/parse-text.js';
+export { stripTags, createId } from './src/create-id.js';
